# UCAS-RL-2026SP

./: .env.example  .gitignore  README.md  progress.md  pyproject.toml  pyrightconfig.json
firmware/: MiniBalance.hex  README.md
firmware/keil/: .mxproject  MiniBalance.ioc
firmware/keil/Core/Inc/: usart.h
firmware/keil/Core/Src/: adc.c  main.c  stm32f1xx_it.c  tim.c  usart.c
firmware/keil/HAREWARE/: IOI2C.c  LED.C  Lidar.c  MPU6050.c  beep.c  encoder.c  key.c  motor.c  oled.c  pstwo.c  timer.c  usart3.c
firmware/keil/HAREWARE/Inc/: IOI2C.h  LED.H  Lidar.h  beep.h  encoder.h  key.h  motor.h  oled.h  pstwo.h  timer.h  usart3.h
firmware/keil/MDK-ARM/: MiniBalance.uvoptx  MiniBalance.uvprojx
firmware/keil/MDK-ARM/RTE/_MiniBalance/: RTE_Components.h
firmware/keil/MiniBalance/: ELE_CCD.c  control.c  filter.c  show.c
firmware/keil/MiniBalance/Inc/: DataScope_DP.h  ELE_CCD.h  control.h  filter.h  show.h
firmware/keil/SYSTEM/: delay.c  sys.c  sys.h
firmware/tools/: mcuispConfig.ini
src/: validate_env.py
src/deploy/: collect_real.py  export_to_c.py  wifi_lqr.py  wifi_proto.py  wifi_rl.py  wifi_test.py
src/env/: __init__.py  balance_car_env.py
src/imitation/: collect_expert.py  pretrain_bc.py
src/train/: config.py  system_id.py  train.py  train_offline.py
src/utils/: lqr.py
