[project]
name = "UCAS-RL-2026SP"
version = "0.1.0"
description = "RL controller for WHEELTEC B585 two-stage balancing robot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib",
    "tensorboard",
    "scipy>=1.17.1",
    "tqdm",
    "rich",
]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true
