[project]
name = "UCAS-RL-2026SP"
version = "0.1.0"
description = "RL controller for WHEELTEC B585 two-stage balancing robot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib",
    "tensorboard",
    "scipy>=1.17.1",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
cu124 = ["torch>=2.0"]
cu121 = ["torch>=2.0"]
cu118 = ["torch>=2.0"]

[[tool.uv.index]]
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv]
conflicts = [
    [
        {extra = "cu124"},
        {extra = "cu121"},
        {extra = "cu118"},
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu118", extra = "cu118" },
]
